# mcp

./: .env.example  .gitignore  AGENTS.md  AGENTS_BOOTSTRAP_TEMPLATE.md  Dockerfile  MCP_SETUP.md  README.md  TEMPLATE_SEARCH_README.md  config.example  docker-compose.yml  login_password.py  pyproject.toml  quick_login.py  requirements.txt  search_av22.py  search_zxc_realm.py  sitecustomize.py  test_keycloak_auth.py  test_persistent_auth.py  test_personal_realm.py  test_search.py  test_simplified_auth.py  test_templates.py  test_templates_extended.py  test_validation.py
docs/: AGENT_ENTRY_GUIDE.md
fastmcp/: __init__.py
onto_mcp/: __init__.py  about_content.py  agent_contract.json  agent_contract.py  api_resources.py  auth.py  keycloak_auth.py  realm_agents.py  resources.py  server.py  session_state_client.py  settings.py  token_storage.py  utils.py
requests/: __init__.py
scripts/: run_preprod_qa.py
tests/: _memory_artifact_schema_transport_probe.py  test_add_existing_nodes_to_diagram.py  test_agent_contract.py  test_agent_memory_tools.py  test_canonical_pagination.py  test_diagram_list_and_tags_tools.py  test_fixed_api.py  test_get_diagram.py  test_get_entity_related_entities.py  test_get_template_fields.py  test_http_onto_api_key_passthrough.py  test_init.py  test_memory_artifact_schema_transport.py  test_memory_artifact_tools.py  test_node_chat_tools.py  test_realm_agent_tools.py  test_search_entities_by_fields.py  test_search_entities_by_relations.py  test_search_relation_templates.py  test_server_runtime.py  test_settings_http_validation.py  test_spaces.py
(+61 files in other folders)
